dynamocharlotte/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> maindc
Rule 1     maindc -> firstQuadruple dc_compound_program
Rule 2     firstQuadruple -> <empty>
Rule 3     dc_compound_program -> varDeclaration subprocedures mainblock
Rule 4     varDeclaration -> variables_dc varDeclaration
Rule 5     varDeclaration -> objectvariables_dc varDeclaration
Rule 6     varDeclaration -> empty
Rule 7     subprocedures -> FUNCTION seen_SubId statements_dc endProcedure RETURN subprocedures
Rule 8     subprocedures -> empty
Rule 9     seen_SubId -> ID
Rule 10    endProcedure -> <empty>
Rule 11    mainblock -> MAIN startPosition statements_dc endPosition END
Rule 12    startPosition -> <empty>
Rule 13    endPosition -> <empty>
Rule 14    statements_dc -> assign_dc statements_dc
Rule 15    statements_dc -> input_dc statements_dc
Rule 16    statements_dc -> print_dc statements_dc
Rule 17    statements_dc -> if_dc statements_dc
Rule 18    statements_dc -> while_dc statements_dc
Rule 19    statements_dc -> dowhile_dc statements_dc
Rule 20    statements_dc -> for_dc statements_dc
Rule 21    statements_dc -> call_dc statements_dc
Rule 22    statements_dc -> unitary_dc statements_dc
Rule 23    statements_dc -> binary_dc statements_dc
Rule 24    statements_dc -> resize_dc statements_dc
Rule 25    statements_dc -> add_dc statements_dc
Rule 26    statements_dc -> empty
Rule 27    variables_dc -> VAR ID AS NUMBER_KEYWORD
Rule 28    variables_dc -> VAR ID AS STRING_KEYWORD
Rule 29    objectvariables_dc -> VECTOR_KEYWORD LEFTPAR NUMBER RIGHTPAR ID
Rule 30    objectvariables_dc -> MAT_KEYWORD LEFTPAR NUMBER COMMA NUMBER RIGHTPAR ID
Rule 31    objectvariables_dc -> CUBE_KEYWORD LEFTPAR NUMBER COMMA NUMBER COMMA NUMBER RIGHTPAR ID
Rule 32    assign_dc -> ID EQUALS generalexpression
Rule 33    assign_dc -> ID LEFTBRACKET arithmeticexpression RIGHTBRACKET EQUALS generalexpression
Rule 34    assign_dc -> ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET EQUALS generalexpression
Rule 35    assign_dc -> ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET EQUALS generalexpression
Rule 36    input_dc -> INPUT LEFTPAR ID RIGHTPAR
Rule 37    input_dc -> INPUT LEFTPAR ID LEFTBRACKET arithmeticexpression RIGHTBRACKET RIGHTPAR
Rule 38    input_dc -> INPUT LEFTPAR ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET RIGHTPAR
Rule 39    input_dc -> INPUT LEFTPAR ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET RIGHTPAR
Rule 40    print_dc -> PRINTLN LEFTPAR printarithmetic RIGHTPAR
Rule 41    print_dc -> PRINT LEFTPAR printarithmetic RIGHTPAR
Rule 42    printarithmetic -> printarithmetic PLUS printarithmetic
Rule 43    printarithmetic -> ID
Rule 44    printarithmetic -> NUMBER
Rule 45    printarithmetic -> STRING
Rule 46    printarithmetic -> ID LEFTBRACKET arithmeticexpression RIGHTBRACKET
Rule 47    printarithmetic -> ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET
Rule 48    printarithmetic -> ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET
Rule 49    print_dc -> PRINT LEFTPAR ENDL RIGHTPAR
Rule 50    if_dc -> IF LEFTPAR logicresult seen_LogicResultIf RIGHTPAR statements_dc if_elsepart seen_IfEnd ENDIF
Rule 51    seen_LogicResultIf -> <empty>
Rule 52    if_elsepart -> ELSE seen_Else statements_dc
Rule 53    if_elsepart -> empty
Rule 54    seen_Else -> <empty>
Rule 55    seen_IfEnd -> <empty>
Rule 56    while_dc -> WHILE seen_While LEFTPAR logicresult seen_LogicResultWhile RIGHTPAR statements_dc seen_WhileEnd WEND
Rule 57    seen_While -> <empty>
Rule 58    seen_LogicResultWhile -> <empty>
Rule 59    seen_WhileEnd -> <empty>
Rule 60    dowhile_dc -> DO seen_Do statements_dc LOOPWHILE LEFTPAR logicresult seen_LogicResultDoWhile RIGHTPAR
Rule 61    seen_Do -> <empty>
Rule 62    seen_LogicResultDoWhile -> <empty>
Rule 63    for_dc -> FOR seen_ID EQUALS arithmeticexpression seen_AE1 TO arithmeticexpression seen_AE2 statements_dc seen_Next NEXT
Rule 64    seen_ID -> ID
Rule 65    seen_AE1 -> <empty>
Rule 66    seen_AE2 -> <empty>
Rule 67    seen_Next -> <empty>
Rule 68    call_dc -> CALL ID
Rule 69    unitary_dc -> ID PLUS PLUS
Rule 70    unitary_dc -> ID MINUS MINUS
Rule 71    binary_dc -> ID PLUS EQUALS arithmeticexpression
Rule 72    binary_dc -> ID MINUS EQUALS arithmeticexpression
Rule 73    binary_dc -> ID MULTIPLY EQUALS arithmeticexpression
Rule 74    binary_dc -> ID DIVIDE EQUALS arithmeticexpression
Rule 75    binary_dc -> ID MODULO EQUALS arithmeticexpression
Rule 76    resize_dc -> ID DOT RESIZE LEFTPAR arithmeticexpression RIGHTPAR
Rule 77    resize_dc -> ID DOT RESIZE LEFTPAR arithmeticexpression COMMA arithmeticexpression RIGHTPAR
Rule 78    resize_dc -> ID DOT RESIZE LEFTPAR arithmeticexpression COMMA arithmeticexpression COMMA arithmeticexpression RIGHTPAR
Rule 79    add_dc -> ID DOT ADD LEFTPAR generalexpression RIGHTPAR
Rule 80    add_dc -> ID DOT ADDROW LEFTPAR RIGHTPAR
Rule 81    add_dc -> ID DOT ADDCOL LEFTPAR RIGHTPAR
Rule 82    add_dc -> ID DOT ADDX LEFTPAR RIGHTPAR
Rule 83    add_dc -> ID DOT ADDY LEFTPAR RIGHTPAR
Rule 84    add_dc -> ID DOT ADDZ LEFTPAR RIGHTPAR
Rule 85    generalexpression -> arithmeticexpression
Rule 86    generalexpression -> STRING
Rule 87    arithmeticexpression -> arithmeticexpression PLUS arithmeticexpression
Rule 88    arithmeticexpression -> arithmeticexpression MINUS arithmeticexpression
Rule 89    arithmeticexpression -> arithmeticexpression MULTIPLY arithmeticexpression
Rule 90    arithmeticexpression -> arithmeticexpression DIVIDE arithmeticexpression
Rule 91    arithmeticexpression -> arithmeticexpression MODULO arithmeticexpression
Rule 92    arithmeticexpression -> ID
Rule 93    arithmeticexpression -> LEFTPAR arithmeticexpression RIGHTPAR
Rule 94    arithmeticexpression -> NUMBER
Rule 95    arithmeticexpression -> ID LEFTBRACKET arithmeticexpression RIGHTBRACKET
Rule 96    arithmeticexpression -> ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET
Rule 97    arithmeticexpression -> ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET
Rule 98    logicresult -> logicexpression
Rule 99    logicexpression -> logicexpression AND logicexpression
Rule 100   logicexpression -> logicexpression OR logicexpression
Rule 101   logicexpression -> LEFTPAR logicexpression RIGHTPAR
Rule 102   logicexpression -> logicOption SAME logicOption
Rule 103   logicexpression -> logicOption DIFFERENT logicOption
Rule 104   logicexpression -> logicOption GREATERTHAN logicOption
Rule 105   logicexpression -> logicOption LESSTHAN logicOption
Rule 106   logicexpression -> logicOption GREATEREQUAL logicOption
Rule 107   logicexpression -> logicOption LESSEQUAL logicOption
Rule 108   logicOption -> ID
Rule 109   logicOption -> ID LEFTBRACKET arithmeticexpression RIGHTBRACKET
Rule 110   logicOption -> ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET
Rule 111   logicOption -> ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET
Rule 112   logicOption -> NUMBER
Rule 113   logicOption -> STRING
Rule 114   logicOption -> LEFTPAR logicOption RIGHTPAR
Rule 115   empty -> <empty>

Terminals, with rules where they appear

ADD                  : 79
ADDCOL               : 81
ADDROW               : 80
ADDX                 : 82
ADDY                 : 83
ADDZ                 : 84
AND                  : 99
AS                   : 27 28
CALL                 : 68
COMMA                : 30 31 31 77 78 78
CUBE_KEYWORD         : 31
DIFFERENT            : 103
DIVIDE               : 74 90
DO                   : 60
DOT                  : 76 77 78 79 80 81 82 83 84
ELSE                 : 52
END                  : 11
ENDIF                : 50
ENDL                 : 49
EQUALS               : 32 33 34 35 63 71 72 73 74 75
FOR                  : 63
FUNCTION             : 7
GREATEREQUAL         : 106
GREATERTHAN          : 104
ID                   : 9 27 28 29 30 31 32 33 34 35 36 37 38 39 43 46 47 48 64 68 69 70 71 72 73 74 75 76 77 78 79 80 81 82 83 84 92 95 96 97 108 109 110 111
IF                   : 50
INPUT                : 36 37 38 39
LEFTBRACKET          : 33 34 34 35 35 35 37 38 38 39 39 39 46 47 47 48 48 48 95 96 96 97 97 97 109 110 110 111 111 111
LEFTPAR              : 29 30 31 36 37 38 39 40 41 49 50 56 60 76 77 78 79 80 81 82 83 84 93 101 114
LESSEQUAL            : 107
LESSTHAN             : 105
LOOPWHILE            : 60
MAIN                 : 11
MAT_KEYWORD          : 30
MINUS                : 70 70 72 88
MODULO               : 75 91
MULTIPLY             : 73 89
NEXT                 : 63
NUMBER               : 29 30 30 31 31 31 44 94 112
NUMBER_KEYWORD       : 27
OR                   : 100
PLUS                 : 42 69 69 71 87
PRINT                : 41 49
PRINTLN              : 40
RESIZE               : 76 77 78
RETURN               : 7
RIGHTBRACKET         : 33 34 34 35 35 35 37 38 38 39 39 39 46 47 47 48 48 48 95 96 96 97 97 97 109 110 110 111 111 111
RIGHTPAR             : 29 30 31 36 37 38 39 40 41 49 50 56 60 76 77 78 79 80 81 82 83 84 93 101 114
SAME                 : 102
STRING               : 45 86 113
STRING_KEYWORD       : 28
TO                   : 63
VAR                  : 27 28
VECTOR_KEYWORD       : 29
WEND                 : 56
WHILE                : 56
error                : 

Nonterminals, with rules where they appear

add_dc               : 25
arithmeticexpression : 33 34 34 35 35 35 37 38 38 39 39 39 46 47 47 48 48 48 63 63 71 72 73 74 75 76 77 77 78 78 78 85 87 87 88 88 89 89 90 90 91 91 93 95 96 96 97 97 97 109 110 110 111 111 111
assign_dc            : 14
binary_dc            : 23
call_dc              : 21
dc_compound_program  : 1
dowhile_dc           : 19
empty                : 6 8 26 53
endPosition          : 11
endProcedure         : 7
firstQuadruple       : 1
for_dc               : 20
generalexpression    : 32 33 34 35 79
if_dc                : 17
if_elsepart          : 50
input_dc             : 15
logicOption          : 102 102 103 103 104 104 105 105 106 106 107 107 114
logicexpression      : 98 99 99 100 100 101
logicresult          : 50 56 60
mainblock            : 3
maindc               : 0
objectvariables_dc   : 5
print_dc             : 16
printarithmetic      : 40 41 42 42
resize_dc            : 24
seen_AE1             : 63
seen_AE2             : 63
seen_Do              : 60
seen_Else            : 52
seen_ID              : 63
seen_IfEnd           : 50
seen_LogicResultDoWhile : 60
seen_LogicResultIf   : 50
seen_LogicResultWhile : 56
seen_Next            : 63
seen_SubId           : 7
seen_While           : 56
seen_WhileEnd        : 56
startPosition        : 11
statements_dc        : 7 11 14 15 16 17 18 19 20 21 22 23 24 25 50 52 56 60 63
subprocedures        : 3 7
unitary_dc           : 22
varDeclaration       : 3 4 5
variables_dc         : 4
while_dc             : 18

Parsing method: LALR

state 0

    (0) S' -> . maindc
    (1) maindc -> . firstQuadruple dc_compound_program
    (2) firstQuadruple -> .

    VAR             reduce using rule 2 (firstQuadruple -> .)
    VECTOR_KEYWORD  reduce using rule 2 (firstQuadruple -> .)
    MAT_KEYWORD     reduce using rule 2 (firstQuadruple -> .)
    CUBE_KEYWORD    reduce using rule 2 (firstQuadruple -> .)
    FUNCTION        reduce using rule 2 (firstQuadruple -> .)
    MAIN            reduce using rule 2 (firstQuadruple -> .)

    maindc                         shift and go to state 1
    firstQuadruple                 shift and go to state 2

state 1

    (0) S' -> maindc .



state 2

    (1) maindc -> firstQuadruple . dc_compound_program
    (3) dc_compound_program -> . varDeclaration subprocedures mainblock
    (4) varDeclaration -> . variables_dc varDeclaration
    (5) varDeclaration -> . objectvariables_dc varDeclaration
    (6) varDeclaration -> . empty
    (27) variables_dc -> . VAR ID AS NUMBER_KEYWORD
    (28) variables_dc -> . VAR ID AS STRING_KEYWORD
    (29) objectvariables_dc -> . VECTOR_KEYWORD LEFTPAR NUMBER RIGHTPAR ID
    (30) objectvariables_dc -> . MAT_KEYWORD LEFTPAR NUMBER COMMA NUMBER RIGHTPAR ID
    (31) objectvariables_dc -> . CUBE_KEYWORD LEFTPAR NUMBER COMMA NUMBER COMMA NUMBER RIGHTPAR ID
    (115) empty -> .

    VAR             shift and go to state 8
    VECTOR_KEYWORD  shift and go to state 9
    MAT_KEYWORD     shift and go to state 10
    CUBE_KEYWORD    shift and go to state 11
    FUNCTION        reduce using rule 115 (empty -> .)
    MAIN            reduce using rule 115 (empty -> .)

    dc_compound_program            shift and go to state 3
    varDeclaration                 shift and go to state 4
    variables_dc                   shift and go to state 5
    objectvariables_dc             shift and go to state 6
    empty                          shift and go to state 7

state 3

    (1) maindc -> firstQuadruple dc_compound_program .

    $end            reduce using rule 1 (maindc -> firstQuadruple dc_compound_program .)


state 4

    (3) dc_compound_program -> varDeclaration . subprocedures mainblock
    (7) subprocedures -> . FUNCTION seen_SubId statements_dc endProcedure RETURN subprocedures
    (8) subprocedures -> . empty
    (115) empty -> .

    FUNCTION        shift and go to state 13
    MAIN            reduce using rule 115 (empty -> .)

    subprocedures                  shift and go to state 12
    empty                          shift and go to state 14

state 5

    (4) varDeclaration -> variables_dc . varDeclaration
    (4) varDeclaration -> . variables_dc varDeclaration
    (5) varDeclaration -> . objectvariables_dc varDeclaration
    (6) varDeclaration -> . empty
    (27) variables_dc -> . VAR ID AS NUMBER_KEYWORD
    (28) variables_dc -> . VAR ID AS STRING_KEYWORD
    (29) objectvariables_dc -> . VECTOR_KEYWORD LEFTPAR NUMBER RIGHTPAR ID
    (30) objectvariables_dc -> . MAT_KEYWORD LEFTPAR NUMBER COMMA NUMBER RIGHTPAR ID
    (31) objectvariables_dc -> . CUBE_KEYWORD LEFTPAR NUMBER COMMA NUMBER COMMA NUMBER RIGHTPAR ID
    (115) empty -> .

    VAR             shift and go to state 8
    VECTOR_KEYWORD  shift and go to state 9
    MAT_KEYWORD     shift and go to state 10
    CUBE_KEYWORD    shift and go to state 11
    FUNCTION        reduce using rule 115 (empty -> .)
    MAIN            reduce using rule 115 (empty -> .)

    variables_dc                   shift and go to state 5
    varDeclaration                 shift and go to state 15
    objectvariables_dc             shift and go to state 6
    empty                          shift and go to state 7

state 6

    (5) varDeclaration -> objectvariables_dc . varDeclaration
    (4) varDeclaration -> . variables_dc varDeclaration
    (5) varDeclaration -> . objectvariables_dc varDeclaration
    (6) varDeclaration -> . empty
    (27) variables_dc -> . VAR ID AS NUMBER_KEYWORD
    (28) variables_dc -> . VAR ID AS STRING_KEYWORD
    (29) objectvariables_dc -> . VECTOR_KEYWORD LEFTPAR NUMBER RIGHTPAR ID
    (30) objectvariables_dc -> . MAT_KEYWORD LEFTPAR NUMBER COMMA NUMBER RIGHTPAR ID
    (31) objectvariables_dc -> . CUBE_KEYWORD LEFTPAR NUMBER COMMA NUMBER COMMA NUMBER RIGHTPAR ID
    (115) empty -> .

    VAR             shift and go to state 8
    VECTOR_KEYWORD  shift and go to state 9
    MAT_KEYWORD     shift and go to state 10
    CUBE_KEYWORD    shift and go to state 11
    FUNCTION        reduce using rule 115 (empty -> .)
    MAIN            reduce using rule 115 (empty -> .)

    objectvariables_dc             shift and go to state 6
    varDeclaration                 shift and go to state 16
    variables_dc                   shift and go to state 5
    empty                          shift and go to state 7

state 7

    (6) varDeclaration -> empty .

    FUNCTION        reduce using rule 6 (varDeclaration -> empty .)
    MAIN            reduce using rule 6 (varDeclaration -> empty .)


state 8

    (27) variables_dc -> VAR . ID AS NUMBER_KEYWORD
    (28) variables_dc -> VAR . ID AS STRING_KEYWORD

    ID              shift and go to state 17


state 9

    (29) objectvariables_dc -> VECTOR_KEYWORD . LEFTPAR NUMBER RIGHTPAR ID

    LEFTPAR         shift and go to state 18


state 10

    (30) objectvariables_dc -> MAT_KEYWORD . LEFTPAR NUMBER COMMA NUMBER RIGHTPAR ID

    LEFTPAR         shift and go to state 19


state 11

    (31) objectvariables_dc -> CUBE_KEYWORD . LEFTPAR NUMBER COMMA NUMBER COMMA NUMBER RIGHTPAR ID

    LEFTPAR         shift and go to state 20


state 12

    (3) dc_compound_program -> varDeclaration subprocedures . mainblock
    (11) mainblock -> . MAIN startPosition statements_dc endPosition END

    MAIN            shift and go to state 22

    mainblock                      shift and go to state 21

state 13

    (7) subprocedures -> FUNCTION . seen_SubId statements_dc endProcedure RETURN subprocedures
    (9) seen_SubId -> . ID

    ID              shift and go to state 24

    seen_SubId                     shift and go to state 23

state 14

    (8) subprocedures -> empty .

    MAIN            reduce using rule 8 (subprocedures -> empty .)


state 15

    (4) varDeclaration -> variables_dc varDeclaration .

    FUNCTION        reduce using rule 4 (varDeclaration -> variables_dc varDeclaration .)
    MAIN            reduce using rule 4 (varDeclaration -> variables_dc varDeclaration .)


state 16

    (5) varDeclaration -> objectvariables_dc varDeclaration .

    FUNCTION        reduce using rule 5 (varDeclaration -> objectvariables_dc varDeclaration .)
    MAIN            reduce using rule 5 (varDeclaration -> objectvariables_dc varDeclaration .)


state 17

    (27) variables_dc -> VAR ID . AS NUMBER_KEYWORD
    (28) variables_dc -> VAR ID . AS STRING_KEYWORD

    AS              shift and go to state 25


state 18

    (29) objectvariables_dc -> VECTOR_KEYWORD LEFTPAR . NUMBER RIGHTPAR ID

    NUMBER          shift and go to state 26


state 19

    (30) objectvariables_dc -> MAT_KEYWORD LEFTPAR . NUMBER COMMA NUMBER RIGHTPAR ID

    NUMBER          shift and go to state 27


state 20

    (31) objectvariables_dc -> CUBE_KEYWORD LEFTPAR . NUMBER COMMA NUMBER COMMA NUMBER RIGHTPAR ID

    NUMBER          shift and go to state 28


state 21

    (3) dc_compound_program -> varDeclaration subprocedures mainblock .

    $end            reduce using rule 3 (dc_compound_program -> varDeclaration subprocedures mainblock .)


state 22

    (11) mainblock -> MAIN . startPosition statements_dc endPosition END
    (12) startPosition -> .

    ID              reduce using rule 12 (startPosition -> .)
    INPUT           reduce using rule 12 (startPosition -> .)
    PRINTLN         reduce using rule 12 (startPosition -> .)
    PRINT           reduce using rule 12 (startPosition -> .)
    IF              reduce using rule 12 (startPosition -> .)
    WHILE           reduce using rule 12 (startPosition -> .)
    DO              reduce using rule 12 (startPosition -> .)
    FOR             reduce using rule 12 (startPosition -> .)
    CALL            reduce using rule 12 (startPosition -> .)
    END             reduce using rule 12 (startPosition -> .)

    startPosition                  shift and go to state 29

state 23

    (7) subprocedures -> FUNCTION seen_SubId . statements_dc endProcedure RETURN subprocedures
    (14) statements_dc -> . assign_dc statements_dc
    (15) statements_dc -> . input_dc statements_dc
    (16) statements_dc -> . print_dc statements_dc
    (17) statements_dc -> . if_dc statements_dc
    (18) statements_dc -> . while_dc statements_dc
    (19) statements_dc -> . dowhile_dc statements_dc
    (20) statements_dc -> . for_dc statements_dc
    (21) statements_dc -> . call_dc statements_dc
    (22) statements_dc -> . unitary_dc statements_dc
    (23) statements_dc -> . binary_dc statements_dc
    (24) statements_dc -> . resize_dc statements_dc
    (25) statements_dc -> . add_dc statements_dc
    (26) statements_dc -> . empty
    (32) assign_dc -> . ID EQUALS generalexpression
    (33) assign_dc -> . ID LEFTBRACKET arithmeticexpression RIGHTBRACKET EQUALS generalexpression
    (34) assign_dc -> . ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET EQUALS generalexpression
    (35) assign_dc -> . ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET EQUALS generalexpression
    (36) input_dc -> . INPUT LEFTPAR ID RIGHTPAR
    (37) input_dc -> . INPUT LEFTPAR ID LEFTBRACKET arithmeticexpression RIGHTBRACKET RIGHTPAR
    (38) input_dc -> . INPUT LEFTPAR ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET RIGHTPAR
    (39) input_dc -> . INPUT LEFTPAR ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET RIGHTPAR
    (40) print_dc -> . PRINTLN LEFTPAR printarithmetic RIGHTPAR
    (41) print_dc -> . PRINT LEFTPAR printarithmetic RIGHTPAR
    (49) print_dc -> . PRINT LEFTPAR ENDL RIGHTPAR
    (50) if_dc -> . IF LEFTPAR logicresult seen_LogicResultIf RIGHTPAR statements_dc if_elsepart seen_IfEnd ENDIF
    (56) while_dc -> . WHILE seen_While LEFTPAR logicresult seen_LogicResultWhile RIGHTPAR statements_dc seen_WhileEnd WEND
    (60) dowhile_dc -> . DO seen_Do statements_dc LOOPWHILE LEFTPAR logicresult seen_LogicResultDoWhile RIGHTPAR
    (63) for_dc -> . FOR seen_ID EQUALS arithmeticexpression seen_AE1 TO arithmeticexpression seen_AE2 statements_dc seen_Next NEXT
    (68) call_dc -> . CALL ID
    (69) unitary_dc -> . ID PLUS PLUS
    (70) unitary_dc -> . ID MINUS MINUS
    (71) binary_dc -> . ID PLUS EQUALS arithmeticexpression
    (72) binary_dc -> . ID MINUS EQUALS arithmeticexpression
    (73) binary_dc -> . ID MULTIPLY EQUALS arithmeticexpression
    (74) binary_dc -> . ID DIVIDE EQUALS arithmeticexpression
    (75) binary_dc -> . ID MODULO EQUALS arithmeticexpression
    (76) resize_dc -> . ID DOT RESIZE LEFTPAR arithmeticexpression RIGHTPAR
    (77) resize_dc -> . ID DOT RESIZE LEFTPAR arithmeticexpression COMMA arithmeticexpression RIGHTPAR
    (78) resize_dc -> . ID DOT RESIZE LEFTPAR arithmeticexpression COMMA arithmeticexpression COMMA arithmeticexpression RIGHTPAR
    (79) add_dc -> . ID DOT ADD LEFTPAR generalexpression RIGHTPAR
    (80) add_dc -> . ID DOT ADDROW LEFTPAR RIGHTPAR
    (81) add_dc -> . ID DOT ADDCOL LEFTPAR RIGHTPAR
    (82) add_dc -> . ID DOT ADDX LEFTPAR RIGHTPAR
    (83) add_dc -> . ID DOT ADDY LEFTPAR RIGHTPAR
    (84) add_dc -> . ID DOT ADDZ LEFTPAR RIGHTPAR
    (115) empty -> .

    ID              shift and go to state 44
    INPUT           shift and go to state 45
    PRINTLN         shift and go to state 46
    PRINT           shift and go to state 47
    IF              shift and go to state 48
    WHILE           shift and go to state 49
    DO              shift and go to state 50
    FOR             shift and go to state 51
    CALL            shift and go to state 52
    RETURN          reduce using rule 115 (empty -> .)

    statements_dc                  shift and go to state 30
    assign_dc                      shift and go to state 31
    input_dc                       shift and go to state 32
    print_dc                       shift and go to state 33
    if_dc                          shift and go to state 34
    while_dc                       shift and go to state 35
    dowhile_dc                     shift and go to state 36
    for_dc                         shift and go to state 37
    call_dc                        shift and go to state 38
    unitary_dc                     shift and go to state 39
    binary_dc                      shift and go to state 40
    resize_dc                      shift and go to state 41
    add_dc                         shift and go to state 42
    empty                          shift and go to state 43

state 24

    (9) seen_SubId -> ID .

    ID              reduce using rule 9 (seen_SubId -> ID .)
    INPUT           reduce using rule 9 (seen_SubId -> ID .)
    PRINTLN         reduce using rule 9 (seen_SubId -> ID .)
    PRINT           reduce using rule 9 (seen_SubId -> ID .)
    IF              reduce using rule 9 (seen_SubId -> ID .)
    WHILE           reduce using rule 9 (seen_SubId -> ID .)
    DO              reduce using rule 9 (seen_SubId -> ID .)
    FOR             reduce using rule 9 (seen_SubId -> ID .)
    CALL            reduce using rule 9 (seen_SubId -> ID .)
    RETURN          reduce using rule 9 (seen_SubId -> ID .)


state 25

    (27) variables_dc -> VAR ID AS . NUMBER_KEYWORD
    (28) variables_dc -> VAR ID AS . STRING_KEYWORD

    NUMBER_KEYWORD  shift and go to state 53
    STRING_KEYWORD  shift and go to state 54


state 26

    (29) objectvariables_dc -> VECTOR_KEYWORD LEFTPAR NUMBER . RIGHTPAR ID

    RIGHTPAR        shift and go to state 55


state 27

    (30) objectvariables_dc -> MAT_KEYWORD LEFTPAR NUMBER . COMMA NUMBER RIGHTPAR ID

    COMMA           shift and go to state 56


state 28

    (31) objectvariables_dc -> CUBE_KEYWORD LEFTPAR NUMBER . COMMA NUMBER COMMA NUMBER RIGHTPAR ID

    COMMA           shift and go to state 57


state 29

    (11) mainblock -> MAIN startPosition . statements_dc endPosition END
    (14) statements_dc -> . assign_dc statements_dc
    (15) statements_dc -> . input_dc statements_dc
    (16) statements_dc -> . print_dc statements_dc
    (17) statements_dc -> . if_dc statements_dc
    (18) statements_dc -> . while_dc statements_dc
    (19) statements_dc -> . dowhile_dc statements_dc
    (20) statements_dc -> . for_dc statements_dc
    (21) statements_dc -> . call_dc statements_dc
    (22) statements_dc -> . unitary_dc statements_dc
    (23) statements_dc -> . binary_dc statements_dc
    (24) statements_dc -> . resize_dc statements_dc
    (25) statements_dc -> . add_dc statements_dc
    (26) statements_dc -> . empty
    (32) assign_dc -> . ID EQUALS generalexpression
    (33) assign_dc -> . ID LEFTBRACKET arithmeticexpression RIGHTBRACKET EQUALS generalexpression
    (34) assign_dc -> . ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET EQUALS generalexpression
    (35) assign_dc -> . ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET EQUALS generalexpression
    (36) input_dc -> . INPUT LEFTPAR ID RIGHTPAR
    (37) input_dc -> . INPUT LEFTPAR ID LEFTBRACKET arithmeticexpression RIGHTBRACKET RIGHTPAR
    (38) input_dc -> . INPUT LEFTPAR ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET RIGHTPAR
    (39) input_dc -> . INPUT LEFTPAR ID LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET LEFTBRACKET arithmeticexpression RIGHTBRACKET RIGHTPAR
    (40) print_dc -> . PRINTLN LEFTPAR printarithmetic RIGHTPAR
    (41) print_dc -> . PRINT LEFTPAR printarithmetic RIGHTPAR
    (49) print_dc -> . PRINT LEFTPAR ENDL RIGHTPAR
    (50) if_dc -> . IF LEFTPAR logicresult seen_LogicResultIf RIGHTPAR statements_dc if_elsepart seen_IfEnd ENDIF
    (56) while_dc -> . WHILE seen_While LEFTPAR logicresult seen_LogicResultWhile RIGHTPAR statements_dc seen_WhileEnd WEND
    (60) dowhile_dc -> . DO seen_Do statements_dc LOOPWHILE LEFTPAR logicresult seen_LogicResultDoWhile RIGHTPAR
    (63) for_dc -> . FOR seen_ID EQUALS arithmeticexpression seen_AE1 TO arithmeticexpression seen_AE2 statements_dc seen_Next NEXT
    (68) call_dc -> . CALL ID
    (69) unitary_dc -> . ID PLUS PLUS
    (70) unitary_dc -> . ID MINUS MINUS
    (71) binary_dc -> . ID PLUS EQUALS arithmeticexpression
    (72) binary_dc -> . ID MINUS EQUALS arithmeticexpression
    (73) binary_dc -> . ID MULTIPLY EQUALS arithmeticexpression
    (74) binary_dc -> . ID DIVIDE EQUALS arithmeticexpression
    (75) binary_dc -> . ID MODULO EQUALS arithmeticexpression
    (76) resize_dc -> . ID DOT RESIZE LEFTPAR arithmeticexpression RIGHTPAR
    (77) resize_dc -> . ID DOT RESIZE LEFTPAR arithmeticexpression COMMA arithmeticexpression RIGHTPAR
    (78) resize_dc -> . ID DOT RESIZE LEFTPAR arithmeticexpression COMMA arithmeticexpression COMMA arithmeticexpression RIGHTPAR
    (79) add_dc -> . ID DOT ADD LEFTPAR generalexpression RIGHTPAR
    (80) add_dc -> . ID DOT ADDROW LEFTPAR RIGHTPAR
    (81) add_dc -> . ID DOT ADDCOL LEFTPAR RIGHTPAR
    (82) add_dc -> . ID DOT ADDX LEFTPAR RIGHTPAR
    (83) add_dc -> . ID DOT ADDY LEFTPAR RIGHTPAR
    (84) add_dc -> . ID DOT ADDZ LEFTPAR RIGHTPAR
    (115) empty -> .

    ID              shift and go to state 44
    INPUT           shift and go to state 45
    PRINTLN         shift and go to state 46
    PRINT           shift and go to state 47
    IF              shift and go to state 48
    WHILE           shift and go to state 49
    DO              shift and go to state 50
    FOR             shift and go to state 51
    CALL            shift and go to state 52
    END             reduce using rule 115 (empty -> .)
